@@ -43,6 +43,10 @@ Stephen White-- for Postgres support.
 
 Jonathon Oddy-- for pointing out and fixing a careless bug.
 
+Kevin Bonner-- for various suggestions and patches.
+
+Odhiambo Washington-- for useful suggestions and helpful bug reports.
+
 And numerous others, for putting up with foolish questions about Unix
 mailspool handling or (more often) indignant rants about Unix in general and
 the sorry state of file locking in particular.
